# efficient-motion-reconstruction

./: .gitmodules  README.md
tams_human_motion/: .gitignore  CMakeLists.txt  package.xml
tams_human_motion/config/: config.yaml  config_metrabs.yaml
tams_human_motion/data/: readme.txt
tams_human_motion/data/SMPL/: 0609dance1.txt  0609dance2.txt  dance1.txt  dance1.yaml  flare1.txt  white7.txt
tams_human_motion/data/mediapipe/: backflip.txt  backflip.yaml  cartwheel.txt  cartwheel.yaml  handwalk.txt  handwalk.yaml  sprint.txt  sprint.yaml
tams_human_motion/launch/: loadmodel.launch  tamsviz.launch
tams_human_motion/scripts/: tams_human_motion
tams_human_motion/scripts/src/: collision.py  configuration.py  dataset.py  dynamics.py  preprocessor.py  reconstruction.py  regularization.py  retargeting.py  visualization.py
tams_human_motion/urdf/: human.xacro
tams_human_motion/viz/: tams_human_motion.tmv  tams_human_motion_mod.tmv
